--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
   <div class="column is-two-thirds">
     <h2 class="title is-3">Video</h2>
     <div class="publication-video">
-      <iframe src="https://youtu.be/PAODfJkVXJo"
+      <iframe src="https://www.youtube.com/embed/PAODfJkVXJo?modestbranding=1&autohide=1&showinfo=0&controls=1"
         frameborder="0" allow="encrypted-media" allowfullscreen></iframe>
     </div>
   </div>
