--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
               <span class="author-block">
                 <a href="https://scholar.google.com/citations?user=T_LryjgAAAAJ&hl=en" target="_blank">Huy Hoang Nguyen</a><sup>1*</sup></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 <span class="author-block">
+                  <a href="https://scholar.google.com/citations?user=qyExc4QAAAAJ&hl=en" target="_blank">Minh Nhat Vu</a><sup>2,4***</sup></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <span class="author-block">
                   <a href="https://scholar.google.de/citations?user=H0GgsQ4AAAAJ&hl=de" target="_blank">Florian Beck</a><sup>2*</sup></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                  <span class="author-block">
-                    <a href="https://scholar.google.com/citations?user=qyExc4QAAAAJ&hl=en" target="_blank">Minh Nhat Vu</a><sup>2,4**</sup></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                   <span class="author-block">
                     <a href="https://scholar.google.com/citations?user=PH_GwWwAAAAJ&hl=de" target="_blank">Gerald Ebmer</a><sup>2</sup></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                   <span class="author-block">
