--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         <h2 class="title is-3">Abstract</h2>
         <div class="content has-text-justified">
           <p>
-            Combining a vision module inside a closed-loop control system for a seamless movement of a robot in a manipulation task is challenging due to the inconsistent update rates between utilized modules. This is even more difficult in a dynamic environment, e.g., objects are moving. 
+            Combining a vision module inside a closed-loop control system for the seamless movement of a robot in a manipulation task is challenging due to the inconsistent update rates between utilized modules. This is even more difficult in a dynamic environment, e.g., objects are moving. 
             This paper presents a modular zero-shot framework for language-driven manipulation of (dynamic) objects through a closed-loop control system with real-time trajectory replanning and an online 6D object pose localization. 
             By leveraging a vision language model via natural language commands, an object is segmented within 0.5s. 
             Then, guided by natural language commands, a closed-loop system, including a unified pose estimation and tracking and online trajectory planning, is utilized to continuously track this object and compute the optimal trajectory in real time. This provides a smooth trajectory that avoids jerky movements and ensures the robot can grasp a non-stationary object. Experiment results exhibit the real-time capability of the proposed zero-shot modular framework for the trajectory optimization module to accurately and efficiently grasp moving objects, i.e., up to 30Hz update rates for the online 6D pose localization module and 10Hz update rates for the receding-horizon trajectory optimization. This highlights the modular framework's potential applications in robotics and human-robot interaction.</p>
@@ -286,7 +286,7 @@
               <br>
               <h2 class="subtitle has-text-centered">
                 Results from our method show that the 3D position trajectory of the object closely matches the ground truth measurements(Opitrack). It is important to note that these measurements are transformed to the camera origin, which is approximately
-                1 m away from the object. The maximum positional error observed is approximately 0.02 m, representing 2% relative
+                1 m from the object. The maximum positional error observed is approximately 0.02 m, representing 2% relative
                 to the distance to the camera. The orientation error is constrained, with a maximum error of 0.15 rad in the roll angle.
               </h2>
             </div>
