--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 
   <title>Language-Driven Closed-Loop Grasping with Model-Predictive
-    Trajectory Replanning</title>
+    Trajectory Optimization</title>
   <link rel="icon" type="image/x-icon" href="static/pdfs/favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
   rel="stylesheet">
@@ -54,19 +54,21 @@
         <div class="columns is-centered">
           <div class="column has-text-centered">
             <h1 class="title is-1 publication-title">Language-Driven Closed-Loop Grasping with Model-Predictive
-              Trajectory Replanning</h1>
+              Trajectory Optimization</h1>
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
-                <a href="https://scholar.google.com/citations?user=T_LryjgAAAAJ&hl=en" target="_blank">Huy Hoang Nguyen</a><sup>1*</sup></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <a href="https://scholar.google.com/citations?user=T_LryjgAAAAJ&hl=en" target="_blank">Huy Hoang Nguyen</a><sup>1</sup></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 <span class="author-block">
-                  <a href="https://scholar.google.com/citations?user=qyExc4QAAAAJ&hl=en" target="_blank">Minh Nhat Vu</a><sup>1,2***</sup></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                  <a href="https://scholar.google.com/citations?user=qyExc4QAAAAJ&hl=en" target="_blank">Minh Nhat Vu</a><sup>1,2*</sup></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 <span class="author-block">
-                  <a href="https://scholar.google.de/citations?user=H0GgsQ4AAAAJ&hl=de" target="_blank">Florian Beck</a><sup>2*</sup></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                  <a href="https://scholar.google.de/citations?user=H0GgsQ4AAAAJ&hl=de" target="_blank">Florian Beck</a><sup>2</sup></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                   <span class="author-block">
                     <a href="https://scholar.google.com/citations?user=PH_GwWwAAAAJ&hl=de" target="_blank">Gerald Ebmer</a><sup>2</sup></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                   <span class="author-block">
                     <a href="https://www.csc.liv.ac.uk/~anguyen/" target="_blank">Anh Nguyen</a><sup>3</sup></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                  <span class="author-block">
+                    <a href="https://scholar.google.com/citations?user=PH_GwWwAAAAJ&hl=de" target="_blank">Wolfgang Kemmetmüller</a><sup>2</sup></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                   <span class="author-block">
                     <a href="https://scholar.google.com/citations?user=ee4tJYgAAAAJ&hl=en" target="_blank">Andreas Kugi</a><sup>1,2</sup></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                   </div>
@@ -75,8 +77,7 @@
                     <span class="author-block"><sup>1</sup>Austrian Institute of Technology</span>&nbsp;&nbsp;
                     <span class="author-block"><sup>2</sup>ACIN - TU Wien</span>&nbsp;&nbsp;
                     <span class="author-block"><sup>3</sup>University of Liverpool</span>&nbsp;&nbsp;
-                    <span class="eql-cntrb"><small><br><sup>*</sup>Equal Contribution</small></span>&nbsp;&nbsp;
-                    <span class="eql-cntrb"><small><br><sup>**</sup>Corresponding Author</small></span>
+                    <span class="eql-cntrb"><small><br><sup>*</sup>Corresponding Author</small></span>
                   </div>
                   <div class="logo-container">
                    <img
@@ -121,7 +122,7 @@
 
                 <!-- ArXiv abstract Link -->
                 <span class="link-block">
-                  <a href="https://arxiv.org/abs/2406.09039" target="_blank"
+                  <a href="https://www.sciencedirect.com/science/article/pii/S0957415825000443" target="_blank"
                   class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                     <i class="ai ai-arxiv"></i>
@@ -300,7 +301,18 @@
   <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
-      <pre><code>BibTex Code Here</code></pre>
+      <pre><code>@article{NGUYEN2025103335,
+                  title = {Language-driven closed-loop grasping with model-predictive trajectory optimization},
+                  journal = {Mechatronics},
+                  volume = {109},
+                  pages = {103335},
+                  year = {2025},
+                  issn = {0957-4158},
+                  doi = {https://doi.org/10.1016/j.mechatronics.2025.103335},
+                  url = {https://www.sciencedirect.com/science/article/pii/S0957415825000443},
+                  author = {H.H. Nguyen and M.N. Vu and F. Beck and G. Ebmer and A. Nguyen and W. Kemmetmueller and A. Kugi},
+                  keywords = {Language-driven object detection, Pose estimation, Grasping, Trajectory optimization},
+                  }</code></pre>
     </div>
 </section>
 <!--End BibTex citation -->
